--- a/13522051_13522105_K1_Deadline1.ipynb
+++ b/13522051_13522105_K1_Deadline1.ipynb
@@ -111,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -134,8 +134,6 @@
         "\n",
         "df_train = pd.read_csv(train_csv)\n",
         "df_test = pd.read_csv(test_csv)\n",
-        "df_train['filepath'] = df_train['Image'].apply(lambda x: str(Path(train_img) / f\"{x}\"))\n",
-        "#df_test['filepath'] = df_test['Image'].apply(lambda x: str(Path(test_img) / f\"{x}\"))\n",
         "\n"
       ]
     },
@@ -531,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": true,
@@ -575,7 +573,8 @@
         "sample_df = df_train.sample(1250, random_state = 42)\n",
         "\n",
         "image_shapes = []\n",
-        "for path in sample_df['filepath']:\n",
+        "for image in sample_df['Image']:\n",
+        "    path = train_img + f\"/{image}\"\n",
         "    with Image.open(path) as img:\n",
         "        image_shapes.append(img.size + (img.mode,))\n",
         "\n",
@@ -769,7 +768,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "datalore": {
           "hide_input_from_viewers": false,
@@ -793,8 +792,8 @@
         "\n",
         "split_df = df_train.copy()\n",
         "\n",
-        "X = split_df.drop(columns=[\"Segmentation\"])\n",
-        "y = split_df[\"Segmentation\"]\n",
+        "X = split_df.drop(columns=[\"Species_Label\"])\n",
+        "y = split_df[\"Species_Label\"]\n",
         "\n",
         "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)"
       ]
@@ -825,66 +824,11 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "datalore": {
-          "hide_input_from_viewers": true,
-          "hide_output_from_viewers": true,
-          "node_id": "xNOF2BVEkXXlg0dvHkOlQd",
-          "type": "MD"
-        },
-        "id": "G1wi4lsu51a6"
-      },
+      "metadata": {},
       "source": [
-        "### Data Imputation for Missing Values  \n",
+        "1. Image Resizing\n",
         "\n",
-        "Imputing missing values is essential to ensure cleaner data. Additionally, missing values can affect the performance of the model used in machine learning.  \n",
-        "\n",
-        "For missing values in categorical data (Ever_Married, Graduated, Profession, Var_1), Mode Imputation will be used. This method is the simplest and fastest. Moreover, since the number of missing values is relatively small compared to the dataset (around 1% of the total data in a column), there will be no significant impact that could cause an overrepresentation of the mode variable.  \n",
-        "\n",
-        "For missing values in numerical data (Work Experience and Family Size), the median will be used for imputation. Since Work Experience and Family Size have integer attribute domains, they can be imputed using either the mean or median. Additionally, due to the relatively large number of missing values, imputing with a representative value for the entire column is preferable over using a constant value or mode."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "datalore": {
-          "hide_input_from_viewers": true,
-          "hide_output_from_viewers": true,
-          "node_id": "0hjeqaX8uaCwj233CKs8nW",
-          "type": "CODE"
-        },
-        "id": "4QO3xU4A51a6"
-      },
-      "outputs": [],
-      "source": [
-        "class FeatureImputer(BaseEstimator, TransformerMixin):\n",
-        "    def __init__(self):\n",
-        "        self.modes = None\n",
-        "        self.impute_values = None\n",
-        "\n",
-        "    def fit(self, x):\n",
-        "        self.modes = x.select_dtypes(include=[\"object\"]).mode().iloc[0]\n",
-        "\n",
-        "        self.impute_values = {}\n",
-        "        for num_col in x.select_dtypes(include=[\"number\"]).columns:\n",
-        "            skewness = skew(x[num_col].dropna())\n",
-        "            if abs(skewness) > 0.5:\n",
-        "                self.impute_values[num_col] = round(x[num_col].median())\n",
-        "            else:\n",
-        "                self.impute_values[num_col] = round(x[num_col].mean())\n",
-        "\n",
-        "        return self\n",
-        "\n",
-        "    def transform(self, x):\n",
-        "        x = x.copy()\n",
-        "        for cat_col, mode_value in self.modes.items():\n",
-        "            x[cat_col].fillna(mode_value, inplace=True)\n",
-        "\n",
-        "        for num_col, value in self.impute_values.items():\n",
-        "            x[num_col].fillna(value, inplace=True)\n",
-        "\n",
-        "        return x"
+        "We will resize our image to fixed dimension of 224 x 224 since it's the standard minimum size for CNN training. Since a standardized and optimal image size is crucial for achieving good performance and efficiency.  "
       ]
     },
     {
@@ -977,71 +921,6 @@
         "        for e_col, le in self.encoders.items():\n",
         "            x[e_col] = x[e_col].astype(str).map(lambda x: le.transform([x])[0] if x in le.classes_ else -1)\n",
         "        return x"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "datalore": {
-          "hide_input_from_viewers": true,
-          "hide_output_from_viewers": true,
-          "node_id": "Qviata5g8lTsLljejk9xKw",
-          "type": "MD"
-        },
-        "id": "WgPrlqiw51a6"
-      },
-      "source": [
-        "### Scaler for Numerical Data\n",
-        "\n",
-        "Feature scaling is a preprocessing technique used in machine learning to standardize the range of independent variables or features of data. The primary goal of feature scaling is to ensure that all features contribute equally to the training process and that machine learning algorithms can work effectively with the data."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "datalore": {
-          "hide_input_from_viewers": true,
-          "hide_output_from_viewers": true,
-          "node_id": "VbJFH70cX4kM6UCac0gDuj",
-          "type": "CODE"
-        },
-        "id": "K0RHHhs951a7"
-      },
-      "outputs": [],
-      "source": [
-        "class FeatureScaler(BaseEstimator, TransformerMixin):\n",
-        "    def fit(self, X, y=None):\n",
-        "        self.scaler_ = MinMaxScaler()\n",
-        "\n",
-        "        self.scaler_.fit(X)\n",
-        "\n",
-        "        return self\n",
-        "\n",
-        "    def transform(self, X):\n",
-        "        X_scaled = self.scaler_.transform(X)\n",
-        "\n",
-        "        return X_scaled"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "datalore": {
-          "hide_input_from_viewers": false,
-          "hide_output_from_viewers": false,
-          "node_id": "GtQ9LTtIIS0csCugXqP4ZF",
-          "report_properties": {
-            "rowId": "uRLt6MoH1sjasbBd7zeIg3"
-          },
-          "type": "MD"
-        },
-        "id": "HHA6nBwA51a7"
-      },
-      "source": [
-        "# Compile Preprocessing Pipeline\n",
-        "\n",
-        "All of the preprocessing classes or functions defined earlier will be compiled in this step."
       ]
     },
     {
